modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -71,6 +71,21 @@
     }
    },
    "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "To translate this concept into C# terms, we are going to use a **two-dimensional** `Array` of **characters**.    \n",
     "   \n",
     "In it we are going to mark with the character `'_'` (**underscore**) the *passable* positions, with `e` the **end** from the labyrinth and with `*` the *impassable* positions. The **starting position** is marked as *passable* position.    "
@@ -92,70 +107,111 @@
    },
    "outputs": [],
    "source": [
-    "public class SearchForPathsInALabrynth\n",
+    "// A Two Dimensional Character Array representation of the Labryinth defined above\n",
+    "static char[ , ] Labryinth =\n",
     "{\n",
-    "\n",
-    "    // A 2 Dimensional Character Array representation of the Labryinth defined above\n",
-    "    public static char[ , ] Labryinth =\n",
-    "    {\n",
-    "        {'_','_','_','*','_','_','_'},\n",
-    "        {'*','*','_','*','_','*','_'},\n",
-    "        {'_','_','_','_','_','_','_'},\n",
-    "        {'_','*','*','*','*','*','_'},\n",
-    "        {'_','_','_','_','_','_','e'},\n",
-    "    };\n",
-    "\n",
-    "\n",
-    "    // A helper method which prints out the 2D char array representation\n",
-    "    // of the Labryinth\n",
-    "    public static void DisplayLabrynth()\n",
-    "    {\n",
-    "\n",
-    "        // Observe the First Row and Last Row Indices of the Labryinth,\n",
-    "        // along with the First Column and Last Column Indices of the Labryinth\n",
-    "        int FirstRowIndex = 0,\n",
-    "            FirstColIndex = 0,\n",
-    "            LastRowIndex  = Labryinth.GetLength( 0 ) - 1,\n",
-    "            LastColIndex  = Labryinth.GetLength( 1 ) - 1;\n",
-    "\n",
-    "\n",
-    "        // Iterating For each of the elements from the First Row Index of the Labryinth \n",
-    "        // up until the Last Row Index:\n",
-    "        for( int CurrentRowIndex = FirstRowIndex; CurrentRowIndex <= LastRowIndex; CurrentRowIndex++ )\n",
-    "        {\n",
-    "\n",
-    "            // Iterating For each of the elements from the First Column Index of the Labryinth \n",
-    "            // up until the Last Column Index:\n",
-    "            for( int CurrentColIndex = FirstColIndex; CurrentColIndex <= LastColIndex; CurrentColIndex++ )\n",
-    "            {\n",
-    "\n",
-    "                // Print the Value at the Current Col Index\n",
-    "                Console.Write(\n",
-    "                    \"{0,-3}\", \n",
-    "                    $\"{ Labryinth[ CurrentRowIndex ,  CurrentColIndex] } \"\n",
-    "                );\n",
-    "\n",
-    "            }\n",
-    "\n",
-    "            // After all that,\n",
-    "            // each of the Column Values of the Current Row have been printed,\n",
-    "            // so we now move on to the next line\n",
-    "            Console.WriteLine();\n",
-    "\n",
-    "        }\n",
-    "\n",
-    "        // After All that,\n",
-    "        // All Column Values have now been printed for every Row in the Array,\n",
-    "        // as required\n",
-    "        \n",
-    "    }\n",
-    "\n",
-    "}"
+    "    {'_','_','_','*','_','_','_'},\n",
+    "    {'*','*','_','*','_','*','_'},\n",
+    "    {'_','_','_','_','_','_','_'},\n",
+    "    {'_','*','*','*','*','*','_'},\n",
+    "    {'_','_','_','_','_','_','e'},\n",
+    "};"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "To assist in visualizing our **two dimensional** `Labryinth`, we me define the following method for iteratively printing the full grid of \"squares\" which it is made up of:  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// A helper method which prints out the 2D char array representation\n",
+    "// of the Labryinth\n",
+    "static void DisplayLabrynth( char[ , ] labryinth )\n",
+    "{\n",
+    "\n",
+    "    // Observe the First Row and Last Row Indices of the labryinth,\n",
+    "    // along with the First Column and Last Column Indices of the labryinth\n",
+    "    int FirstRowIndex = 0,\n",
+    "        FirstColIndex = 0,\n",
+    "        LastRowIndex  = labryinth.GetLength( 0 ) - 1,\n",
+    "        LastColIndex  = labryinth.GetLength( 1 ) - 1;\n",
+    "\n",
+    "\n",
+    "    // Iterating For each of the elements from the First Row Index of the labryinth \n",
+    "    // up until the Last Row Index:\n",
+    "    for( int CurrentRowIndex = FirstRowIndex; CurrentRowIndex <= LastRowIndex; CurrentRowIndex++ )\n",
+    "    {\n",
+    "\n",
+    "        // Iterating For each of the elements from the First Column Index of the labryinth \n",
+    "        // up until the Last Column Index:\n",
+    "        for( int CurrentColIndex = FirstColIndex; CurrentColIndex <= LastColIndex; CurrentColIndex++ )\n",
+    "        {\n",
+    "\n",
+    "            // Print the Value at the Current Col Index\n",
+    "            Console.Write(\n",
+    "                \"{0,-3}\", \n",
+    "                $\"{ labryinth[ CurrentRowIndex ,  CurrentColIndex ] } \"\n",
+    "            );\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "        // After all that,\n",
+    "        // each of the Column Values of the Current Row have been printed,\n",
+    "        // so we now move on to the next line\n",
+    "        Console.WriteLine();\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    // After All that,\n",
+    "    // All Column Values have now been printed for every Row in the Array,\n",
+    "    // as required\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -181,7 +237,7 @@
     }
    ],
    "source": [
-    "SearchForPathsInALabrynth.DisplayLabrynth();"
+    "DisplayLabrynth( Labryinth );"
    ]
   },
   {
