modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -88,7 +88,9 @@
    "source": [
     "To translate this concept into C# terms, we are going to use a **two-dimensional** `Array` of **characters**.    \n",
     "   \n",
-    "In it we are going to mark with the character `'_'` (**underscore**) the *passable* positions, with `e` the **end** from the labyrinth and with `*` the *impassable* positions. The **starting position** is marked as *passable* position.    "
+    "In it we are going to mark the *passable* positions with the character `'_'` (**underscore**), the **end** of the labyrinth with the `e` character, and  the *impassable* positions with `*` character.  \n",
+    "   \n",
+    "The **starting position** is marked as *passable* position.    "
    ]
   },
   {
