modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -112,11 +112,12 @@
     "// A Two Dimensional Character Array representation of the Labryinth defined above\n",
     "static char[ , ] Labryinth =\n",
     "{\n",
-    "    {'_','_','_','*','_','_','_'},\n",
-    "    {'*','*','_','*','_','*','_'},\n",
-    "    {'_','_','_','_','_','_','_'},\n",
-    "    {'_','*','*','*','*','*','_'},\n",
-    "    {'_','_','_','_','_','_','e'},\n",
+    "    //       M Columns             BY\n",
+    "    {'_','_','_','*','_','_','_'}, //\n",
+    "    {'*','*','_','*','_','*','_'}, //\n",
+    "    {'_','_','_','_','_','_','_'}, //      N Rows\n",
+    "    {'_','*','*','*','*','*','_'}, //\n",
+    "    {'_','_','_','_','_','_','e'}, //\n",
     "};"
    ]
   },
@@ -147,7 +148,59 @@
     }
    },
    "source": [
-    "To assist in visualizing our **two dimensional** `Labryinth`, we me define the following method for iteratively printing the full grid of \"squares\" which it is made up of:  "
+    "Further, as demonstrated in the example above,   \n",
+    "the $\\text{number of rows}$, corresponding to $N$, is accesible in C# by way of the built-in Multidimensional Array method `GetLength( 0 )`.  \n",
+    "The $\\text{number of columns}$ corresponding to $M$, is subsequently accesible in C# by way of `GetLength( 1 )`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "int N = Labryinth.GetLength( 0 ),\n",
+    "    M = Labryinth.GetLength( 1 );"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "To assist in visualizing our **two dimensional** `Labryinth`, we may define the following method for iteratively printing the full $M \\times N$ grid of \"squares\" which it is made up of:  "
    ]
   },
   {
@@ -415,7 +468,7 @@
     }
    },
    "source": [
-    "In order to print the paths found by our recursive algorithm, we can use an `Array` to store every step we take using the following **characters**: \n",
+    "In order to print the paths found by our recursive algorithm, we can use a **One-Dimensional** `Array` to store every step we take using the following **characters**: \n",
     "- `L` – left, \n",
     "- `U` – up, \n",
     "- `R` – right, \n",
@@ -464,9 +517,118 @@
     "   \n",
     "##### What should be the **size** of the `Array`?   \n",
     "    \n",
-    "The answer to this question is easy; since we can enter each \"square\" at most once, then the path can never be longer than the *count of all squares* $N \\times M$.    \n",
+    "The answer to this question is easy; since we can enter each \"square\" at most once, then the path can never be longer than the *count of all squares*, which is equivalent to $N \\times M$.    \n",
     "\n",
     "In our case the **size** of the maze is $7 \\times 5$, i.e. the **size** of the `Array` has to be `35`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>35</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "N * M"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "As such, we may declare the following **one-dimensional** `Array` of type `char` which will store each respective Path to the **end**: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "char[] Path =  new char[ N * M ];"
    ]
   }
  ],
