modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -110,7 +110,7 @@
    "outputs": [],
    "source": [
     "// A Two Dimensional Character Array representation of the Labryinth defined above\n",
-    "static char[ , ] Labryinth =\n",
+    "char[ , ] Labryinth =\n",
     "{\n",
     "    //       M Columns             BY\n",
     "    {'_','_','_','*','_','_','_'}, //\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -221,7 +221,7 @@
    "source": [
     "// A helper method which prints out the 2D char array representation\n",
     "// of the Labryinth\n",
-    "static void DisplayLabrynth( char[ , ] labryinth )\n",
+    "void DisplayLabrynth( char[ , ] labryinth )\n",
     "{\n",
     "\n",
     "    // Observe the First Row and Last Row Indices of the labryinth,\n",
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -415,7 +415,8 @@
    },
    "source": [
     "We can consider searching *from* a given position in the labyrinth (including , but not limited to, the **start**), *to* the **end** of the labyrinth, as a **recursive** process: \n",
-    "- Let the **current position** in the labyrinth be `(row, col)`. In the beginning we go from the **start** position `(0, 0)`.\n",
+    "- Let the **current position** in the labyrinth be `(row, col)`.\n",
+    "  - In the beginning we go from the **start** position `(0, 0)`.\n",
     "- If the **current position** is the *searched position* `(N-1, M-1)`, then we have found a path and we should print it.\n",
     "- If the **current position** is *impassable*, we go back (we have no right to step on it).\n",
     "- If the **current position** is *already visited*, we go back (we have no right to step on it twice).\n",
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -614,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -629,6 +630,102 @@
    "outputs": [],
    "source": [
     "char[] Path =  new char[ N * M ];"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Further, we may declare the following method to assist in printing out the current `Array` of **Path** steps:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "void PrintPath( char[] path, int start, int end )\n",
+    "{\n",
+    "\n",
+    "    // Iterating For every Current Direction from the start, up until the end:\n",
+    "    for( int CurrentDirection = start; CurrentDirection < end; CurrentDirection++ )\n",
+    "    {\n",
+    "\n",
+    "        // Print the value of the Current Direction\n",
+    "        Console.Write( path[ CurrentDirection ] );\n",
+    "\n",
+    "    }\n",
+    "    \n",
+    "    // After all that,\n",
+    "    // We have printed each directional step from the start until the end.\n",
+    "    // We now print a line break to provide seperation for the next output.\n",
+    "    Console.WriteLine();\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Recursive Algorithm "
    ]
   }
  ],
