modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -252,14 +252,17 @@
     "\n",
     "        // After all that,\n",
     "        // each of the Column Values of the Current Row have been printed,\n",
-    "        // so we now move on to the next line\n",
+    "        // so we now move on, skipping the next two lines\n",
     "        Console.WriteLine();\n",
     "\n",
     "    }\n",
     "\n",
     "    // After All that,\n",
     "    // All Column Values have now been printed for every Row in the Array,\n",
-    "    // as required\n",
+    "    // as required.\n",
+    "\n",
+    "    // But skip an extra line though...\n",
+    "    Console.WriteLine();\n",
     "    \n",
     "}"
    ]
@@ -287,7 +290,8 @@
       "*  *  _  *  _  *  _  \n",
       "_  _  _  _  _  _  _  \n",
       "_  *  *  *  *  *  _  \n",
-      "_  _  _  _  _  _  e  \n"
+      "_  _  _  _  _  _  e  \n",
+      "\n"
      ]
     }
    ],
@@ -516,11 +520,11 @@
    },
    "source": [
     "   \n",
-    "##### What should be the **size** of the `Array`?   \n",
+    "##### What should be the **size** of the **Path** `Array`?   \n",
     "    \n",
     "The answer to this question is easy; since we can enter each \"square\" at most once, then the path can never be longer than the *count of all squares*, which is equivalent to $N \\times M$.    \n",
     "\n",
-    "In our case the **size** of the maze is $7 \\times 5$, i.e. the **size** of the `Array` has to be `35`."
+    "In our case the **size** of the maze is $7 \\times 5$, i.e. the **size** of the `Array` has to be `35`:"
    ]
   },
   {
@@ -659,7 +663,7 @@
     }
    },
    "source": [
-    "Further, we may declare the following method to assist in printing out the current `Array` of **Path** steps:"
+    "We must also set up an **Path Index** to help iterate through the **Path** `Array` "
    ]
   },
   {
@@ -678,15 +682,65 @@
    },
    "outputs": [],
    "source": [
+    "int PathIndex = 0;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Further, we may declare the following method to assist in printing out the current `Array` of *directional steps* which copmrise the **Path** :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
     "void PrintPath( char[] path, int start, int end )\n",
     "{\n",
+    "    Console.WriteLine(\"Found a Path to the end: \");\n",
     "\n",
-    "    // Iterating For every Current Direction from the start, up until the end:\n",
-    "    for( int CurrentDirection = start; CurrentDirection < end; CurrentDirection++ )\n",
+    "    // Iterating For every Current Index from the start, up until the end:\n",
+    "    for( int CurrentIndex = start; CurrentIndex <= end; CurrentIndex++ )\n",
     "    {\n",
     "\n",
-    "        // Print the value of the Current Direction\n",
-    "        Console.Write( path[ CurrentDirection ] );\n",
+    "        // Print the directional step at the Current Index\n",
+    "        Console.Write( path[ CurrentIndex ] );\n",
     "\n",
     "    }\n",
     "    \n",
@@ -726,6 +780,194 @@
    },
    "source": [
     "### Recursive Algorithm Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "void FindPath( int row, int column, char directional_step )\n",
+    "{\n",
+    "\n",
+    "    // If EITHER the given row or column arguments\n",
+    "    // are out of bounds of the Labryinth, which is an N X M character array:\n",
+    "    if( (row < 0 || column < 0) || ( row >= N || column >= M) )\n",
+    "    {\n",
+    "\n",
+    "        // We are out of the the Labryinth\n",
+    "        return;\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    // Otherwise,\n",
+    "    // Append the current directional step to the Path array\n",
+    "    // taking care to simultaneously increment the Path Index\n",
+    "    Path[ PathIndex++ ] = directional_step;\n",
+    "\n",
+    "\n",
+    "    // If we have arrived at the end of the Labryinth:\n",
+    "    if( Labryinth[ row, column ] == 'e')\n",
+    "    {\n",
+    "\n",
+    "        // Print out the Path of directional steps leading\n",
+    "        // to the end of the Labryinth\n",
+    "        PrintPath( Path, 1,  PathIndex - 1);\n",
+    "        DisplayLabrynth( Labryinth );\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    // If the Current \"square\" is passable:\n",
+    "    if( Labryinth[ row, column ] == '_' )\n",
+    "    {\n",
+    "    \n",
+    "        // Mark the Current \"square\" as being visited with a 'v'\n",
+    "        Labryinth[ row, column ] = 'v';\n",
+    "\n",
+    "\n",
+    "        // Recur in all directions relative to the current \"square\"\n",
+    "        FindPath( row,     column - 1, 'L');  //  left      \n",
+    "        FindPath( row - 1, column,     'U');  //  up      \n",
+    "        FindPath( row,     column + 1, 'R');  //  right      \n",
+    "        FindPath( row + 1, column,     'D');  //  down\n",
+    "\n",
+    "\n",
+    "        // Reset the Current \"square\" as free\n",
+    "        Labryinth[ row, column ] = '_';      \n",
+    "\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    // Decrement the Path Index\n",
+    "    // to avoid going out of bounds ot the Path array \n",
+    "    PathIndex--;\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found a Path to the end: \n",
+      "RRDDLLDDRRRRRR\n",
+      "v  v  v  *  _  _  _  \n",
+      "*  *  v  *  _  *  _  \n",
+      "v  v  v  _  _  _  _  \n",
+      "v  *  *  *  *  *  _  \n",
+      "v  v  v  v  v  v  e  \n",
+      "\n",
+      "Found a Path to the end: \n",
+      "RRDDRRUURRDDDD\n",
+      "v  v  v  *  v  v  v  \n",
+      "*  *  v  *  v  *  v  \n",
+      "_  _  v  v  v  _  v  \n",
+      "_  *  *  *  *  *  v  \n",
+      "_  _  _  _  _  _  e  \n",
+      "\n",
+      "Found a Path to the end: \n",
+      "RRDDRRRRDD\n",
+      "v  v  v  *  _  _  _  \n",
+      "*  *  v  *  _  *  _  \n",
+      "_  _  v  v  v  v  v  \n",
+      "_  *  *  *  *  *  v  \n",
+      "_  _  _  _  _  _  e  \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "FindPath( 0, 0, 'v' );"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_  _  _  *  _  _  _  \n",
+      "*  *  _  *  _  *  _  \n",
+      "_  _  _  _  _  _  _  \n",
+      "_  *  *  *  *  *  _  \n",
+      "_  _  _  _  _  _  e  \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "DisplayLabrynth( Labryinth );"
    ]
   }
  ],
