modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -783,6 +783,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Having performed the steps outlined above, we may now finally implement our recursive algorithm to **print all possible paths from the start of the labyrinth, to the end**. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
@@ -874,6 +889,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Now, all that remains to do is to simply invoke the recursive method which we have declared above, starting the first *visited* \"square\" at position `(0,0)`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -921,53 +951,6 @@
    ],
    "source": [
     "FindPath( 0, 0, 'v' );"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_  _  _  *  _  _  _  \n",
-      "*  *  _  *  _  *  _  \n",
-      "_  _  _  _  _  _  _  \n",
-      "_  *  *  *  *  *  _  \n",
-      "_  _  _  _  _  _  e  \n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "DisplayLabrynth( Labryinth );"
    ]
   }
  ],
