modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -421,7 +421,7 @@
     "We can consider searching *from* a given position in the labyrinth (including , but not limited to, the **start**), *to* the **end** of the labyrinth, as a **recursive** process: \n",
     "- Let the **current position** in the labyrinth be `(row, col)`.\n",
     "  - In the beginning we go from the **start** position `(0, 0)`.\n",
-    "- If the **current position** is the *searched position* `(N-1, M-1)`, then we have found a path and we should print it.\n",
+    "- If the **current position** is the **end** position, `(N-1, M-1)`, then we have found a path and we should print it.\n",
     "- If the **current position** is *impassable*, we go back (we have no right to step on it).\n",
     "- If the **current position** is *already visited*, we go back (we have no right to step on it twice).\n",
     "- Otherwise, we look for a path in **four possible directions**. We search **recursively** for a path to the **end** from the labyrinth by trying to go in **all possible directions**: \n",
