modified:   10. Recursion/Recursion vs Iteration.ipynb

--- a/10. Recursion/Recursion vs Iteration.ipynb
+++ b/10. Recursion/Recursion vs Iteration.ipynb
@@ -1284,16 +1284,16 @@
    "source": [
     "```c#\n",
     "[access_modifier]  return_type  RecursiveMethodName( [parameters_list] )\n",
-    "{  \n",
-    "    if( SomeStuff )\n",
-    "    {\n",
-    "        return RecursiveMethodName( SomeArgument );\n",
-    "    }\n",
-    "     \n",
-    "    else if( SomeOtherStuff )\n",
-    "    {\n",
-    "        return RecursiveMethodName( SomeOtherArgument );\n",
-    "    }  \n",
+    "{\n",
+    "    // recur somewhere...\n",
+    "    RecursiveMethodName( SomeArgument );\n",
+    "\n",
+    "    // recur somewhere else too\n",
+    "    RecursiveMethodName( SomeOtherArgument );\n",
+    "\n",
+    "    // recur over there as well\n",
+    "    RecursiveMethodName( YetAnotherArgument );\n",
+    "\n",
     "}\n",
     "```"
    ]
