--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -148,9 +148,8 @@
     }
    },
    "source": [
-    "Further, as demonstrated in the example above,   \n",
-    "the $\\text{number of rows}$, corresponding to $N$, is accesible in C# by way of the built-in Multidimensional Array method `GetLength( 0 )`.  \n",
-    "The $\\text{number of columns}$ corresponding to $M$, is subsequently accesible in C# by way of `GetLength( 1 )`. "
+    "Further, in accordance with the the example above,   \n",
+    "the $\\text{number of rows}$, corresponding to $N$, is accesible in C# by way of the built-in Multidimensional Array method `GetLength( 0 )`, while the $\\text{number of columns}$ corresponding to $M$, is subsequently accesible in C# by way of `GetLength( 1 )`. "
    ]
   },
   {
@@ -965,8 +964,61 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "name": "vscode"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
+     },
+     {
+      "aliases": [],
+      "name": "value"
      }
     ]
    }
