modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -480,9 +480,7 @@
     "    \n",
     "This `Array` will store each sequence of steps along the current path from the start of the labyrinth, up until to the current position.    \n",
     "   \n",
-    "We are going to need an `Array` of type `char` and an *counter* to count the steps we have taken. \n",
-    "   \n",
-    "The counter will keep track of how many times we have moved to the next position recursively, i.e. the current **depth** of recursion. \n",
+    "We are going to need an `Array` of type `char` and a *counter* to count the steps we have taken, which will keep track of *how many times we have moved to the next position recursively*, i.e. the current **depth** of recursion. \n",
     "   \n",
     "In order to work correctly, our program has to *increment the counter* when entering recursion, and *store the direction* we have taken to get to the current position in the `Array`. \n",
     "   \n",
