modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -709,7 +709,7 @@
     }
    },
    "source": [
-    "Further, we may declare the following method to assist in printing out the current `Array` of *directional steps* which copmrise the **Path** :"
+    "Further, we may declare the following method to assist in printing out the  **one-dimensional** `Array` of *directional steps* that comprise the current **Path** :"
    ]
   },
   {
