modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -730,7 +730,10 @@
    "source": [
     "void PrintPath( char[] path, int start, int end )\n",
     "{\n",
+    "\n",
+    "    // Indicate that an Path to the end has been found\n",
     "    Console.WriteLine(\"Found a Path to the end: \");\n",
+    "\n",
     "\n",
     "    // Iterating For every Current Index from the start, up until the end:\n",
     "    for( int CurrentIndex = start; CurrentIndex <= end; CurrentIndex++ )\n",
