modified:   11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb

--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -178,7 +178,6 @@
     "  img{\n",
     "    width: 450px;\n",
     "  }\n",
-    "\n",
     "</style>\n",
     "\n",
     "\n",
@@ -212,7 +211,7 @@
     "    </table>\n",
     "  </div>\n",
     "  <div class=\"column\">\n",
-    "    <img src=\"_img\\lassie.jpg\" style=\"width: 450px\"></img>\n",
+    "    <img src=\"./_img/lassie.jpg\" style=\"width: 450px\"></img>\n",
     "  </div>\n",
     "</div>"
    ]
